--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -1,7 +1,8 @@
-bin_PROGRAMS = wxapp wxapp2
-AM_CPPFLAGS = 
+bin_PROGRAMS = wxapp wxapp2 wxapp3
+AM_CPPFLAGS =
 
 wxapp_SOURCES = wxapp.cpp
 
 wxapp2_SOURCES = wxapp2.cpp
 
+wxapp3_SOURCES = wxapp3.cpp
