--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -1,4 +1,4 @@
-bin_PROGRAMS = wxapp wxapp2 wxapp3
+bin_PROGRAMS = wxapp wxapp2 wxapp3 cmdline-hello cmdline-hello2 cmdline-hello3
 AM_CPPFLAGS =
 
 wxapp_SOURCES = wxapp.cpp
@@ -6,3 +6,7 @@ wxapp_SOURCES = wxapp.cpp
 wxapp2_SOURCES = wxapp2.cpp
 
 wxapp3_SOURCES = wxapp3.cpp
+
+cmdline_hello_SOURCES = cmdline-hello.cpp
+cmdline_hello2_SOURCES = cmdline-hello2.cpp
+cmdline_hello3_SOURCES = cmdline-hello3.cpp
