--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,6 +1,8 @@
 cmake_minimum_required(VERSION 3.0)
 project(cpplambdas)
 
+set(CMAKE_CXX_STANDARD 17)
+
 include(CheckIncludeFiles)
 
 #find dependencies
